--- a/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-graphql.adoc.po
@@ -3,81 +3,75 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-27 20:49+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/microprofile-graphql.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - GraphQL"
 msgstr "Quarkus - GraphQL"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:12
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can utilize the **Eclipse MicroProfile GraphQL** specification through the SmallRye GraphQL extension."
-msgstr "このガイドでは、QuarkusアプリケーションがSmallRye GraphQLエクステンションを使用して *Eclipse MicroProfile GraphQL* 仕様を利用する方法を説明します。"
+msgstr "このガイドでは、QuarkusアプリケーションがSmallRye GraphQLエクステンションを使用して **Eclipse MicroProfile GraphQL** 仕様を利用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:14
-#, fuzzy
 msgid "As the https://www.graphql.org/[GraphQL] specification website states:"
 msgstr "link:https://www.graphql.org/[GraphQLの] 仕様サイトにも記載されているように"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:20
-#, fuzzy
 msgid "GraphQL is a query language for APIs and a runtime for fulfilling those queries with your existing data.  GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools."
-msgstr "GraphQLはAPI用のクエリ言語であり、既存のデータを使ってクエリを実行するためのランタイムです。GraphQLは、API内のデータを完全かつ理解しやすい形で記述し、クライアントが必要とするものを正確に求めることができるようにします。"
+msgstr "GraphQLは、APIのクエリ言語であり、既存のデータでこれらのクエリを実行するためのランタイムです。 GraphQLは、API内のデータの完全で理解しやすい説明を提供し、クライアントが必要なものだけを正確に要求できるようにし、時間の経過とともにAPIを進化させやすくし、強力な開発者ツールを実現にします。"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:23
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "**GraphQL** was originally developed by **Facebook** in 2012 and has been\n"
 "an open standard since 2015.\n"
-msgstr "*GraphQLは* もともと2012年に *Facebookが* 開発したもので、2015年からはオープンスタンダードとなっています。"
+msgstr "**GraphQL** はもともと2012年に **Facebook** が開発したもので、2015年からはオープンスタンダードとなっています。\n"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:26
-#, fuzzy
 msgid "GraphQL is not a replacement for REST API specification but merely an alternative. Unlike REST, GraphQL API's have the ability to benefit the client by:"
-msgstr "GraphQLはREST APIの仕様を置き換えるものではなく、単なる代替品です。RESTとは異なり、GraphQL APIは以下のようにクライアントに利益をもたらす機能を持っています。"
+msgstr "GraphQLはREST APIの仕様を置き換えるものではなく、単なる別の手段です。RESTとは異なり、GraphQL APIは以下のようにクライアントに利益をもたらす機能を持っています。"
 
 #. type: Labeled list
 #: upstream/_guides/microprofile-graphql.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Preventing Over-fetching and Under-fetching"
 msgstr "オーバーフェッチとアンダーフェッチの防止"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:33
-#, fuzzy
 msgid "REST API's are server-driven fixed data responses that cannot be determined by the client. Although the client does not require all the fields the client must retrieve all the data hence `Over-fetching`. A client may also require multiple REST API calls according to the first call (HATEOAS) to retrieve all the data that is required thereby `Under-fetching`."
-msgstr "REST API は、クライアントが決定できないサーバー主導の固定データレスポンスです。クライアントはすべてのフィールドを必要としませんが、クライアントはすべてのデータを取得しなければならないため、 `Over-fetching` 。クライアントはまた、必要とされるすべてのデータを取得するために、最初の呼び出し(HATEOAS)に応じて複数のREST API呼び出しを必要とする場合があります。 `Under-fetching` ."
+msgstr "REST API は、クライアントが決定できないサーバー主導の固定データレスポンスです。クライアントはすべてのフィールドを必要としなくても、クライアントはすべてのデータを取得しなければならないため、 `Over-fetching` です。クライアントはまた、必要とされるすべてのデータを取得するために、最初の呼び出し(HATEOAS)に応じて複数のREST API呼び出しを必要とする場合があり、 `Under-fetching` です。"
 
 #. type: Labeled list
 #: upstream/_guides/microprofile-graphql.adoc:34
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "API Evolution"
 msgstr "APIの進化"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:38
-#, fuzzy
 msgid "Since GraphQL API's returns data that are requested by the client adding additional fields and capabilities to existing API will not create breaking changes to existing clients."
 msgstr "GraphQL APIはクライアントから要求されたデータを返すので、既存のAPIにフィールドや機能を追加しても、既存のクライアントに大きな変更を加えることはありません。"
 
@@ -119,13 +113,11 @@ msgstr "アーキテクチャ"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:52
-#, fuzzy
 msgid "In this guide, we build a simple GraphQL application that exposes a GraphQL API at `/graphql`."
 msgstr "このガイドでは、 `/graphql` で GraphQL API を公開するシンプルな GraphQL アプリケーションを構築します。"
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:54
-#, fuzzy
 msgid "This example was inspired by a popular GraphQL API."
 msgstr "この例は、人気のある GraphQL API にインスパイアされたものです。"
 
@@ -146,13 +138,12 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: quote
 #: upstream/_guides/microprofile-graphql.adoc:63
-#, fuzzy
 msgid "The solution is located in the `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory]."
 msgstr "ソリューションは `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:64
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -175,13 +166,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:79
-#, fuzzy
 msgid "This command generates a Maven project, importing the `smallrye-graphql` extension which is an implementation of the MicroProfile GraphQL specification used in Quarkus."
 msgstr "このコマンドは、Quarkusで使用されているMicroProfile GraphQL仕様の実装である `smallrye-graphql` エクステンションをインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:82
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-graphql` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-graphql` エクステンションを追加することができます。"
 
@@ -208,19 +197,17 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:98
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Preparing an Application: GraphQL API"
-msgstr "アプリケーションの準備GraphQL API"
+msgstr "アプリケーションの準備: GraphQL API"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:101
-#, fuzzy
 msgid "In this section we will start creating the GraphQL API."
 msgstr "このセクションでは、GraphQL APIの作成を開始します。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:103
-#, fuzzy
 msgid "First, create the following entities representing a film from a galaxy far far away:"
 msgstr "まず、遠く離れた銀河系の映画を表す次のような実体を作りなさい。"
 
@@ -746,13 +733,12 @@ msgstr "このようにして、最初のクエリー可能なAPIを作成しま
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:351
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Launch"
-msgstr "打ち上げ"
+msgstr "起動"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:354
-#, fuzzy
 msgid "Launch the quarkus app:"
 msgstr "quarkusアプリを起動します。"
 
@@ -788,9 +774,9 @@ msgstr "サーバーはGraphQL APIの完全なスキーマを返します。"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-graphql.adoc:370
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "GraphiQL UI"
-msgstr "グラフィQL UI"
+msgstr "GraphiQL UI"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-graphql.adoc:373
