Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/microprofile-graphql.adoc.po
@@ -23,22 +23,22 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:6
 #, no-wrap
 msgid "Quarkus - GraphQL"
-msgstr ""
+msgstr "Quarkus - GraphQL"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:12
 msgid "This guide demonstrates how your Quarkus application can utilize the **Eclipse MicroProfile GraphQL** specification through the SmallRye GraphQL extension."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがSmallRye GraphQLエクステンションを使用して **Eclipse MicroProfile GraphQL** 仕様を利用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:14
 msgid "As the https://www.graphql.org/[GraphQL] specification website states:"
-msgstr ""
+msgstr "link:https://www.graphql.org/[GraphQLの] 仕様サイトにも記載されているように"
 
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:20
 msgid "GraphQL is a query language for APIs and a runtime for fulfilling those queries with your existing data.  GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools."
-msgstr ""
+msgstr "GraphQLは、APIのクエリ言語であり、既存のデータでこれらのクエリを実行するためのランタイムです。 GraphQLは、API内のデータの完全で理解しやすい説明を提供し、クライアントが必要なものだけを正確に要求できるようにし、時間の経過とともにAPIを進化させやすくし、強力な開発者ツールを実現にします。"
 
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:23
@@ -46,23 +46,23 @@ msgstr ""
 msgid ""
 "**GraphQL** was originally developed by **Facebook** in 2012 and has been\n"
 "an open standard since 2015.\n"
-msgstr ""
+msgstr "**GraphQL** はもともと2012年に **Facebook** が開発したもので、2015年からはオープンスタンダードとなっています。\n"
 
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:26
 msgid "GraphQL is not a replacement for REST API specification but merely an alternative. Unlike REST, GraphQL API's have the ability to benefit the client by:"
-msgstr ""
+msgstr "GraphQLはREST APIの仕様を置き換えるものではなく、単なる別の手段です。RESTとは異なり、GraphQL APIは以下のようにクライアントに利益をもたらす機能を持っています。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:27
 #, no-wrap
 msgid "Preventing Over-fetching and Under-fetching"
-msgstr ""
+msgstr "オーバーフェッチとアンダーフェッチの防止"
 
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:33
 msgid "REST API's are server-driven fixed data responses that cannot be determined by the client. Although the client does not require all the fields the client must retrieve all the data hence `Over-fetching`. A client may also require multiple REST API calls according to the first call (HATEOAS) to retrieve all the data that is required thereby `Under-fetching`."
-msgstr ""
+msgstr "REST API は、クライアントが決定できないサーバー主導の固定データレスポンスです。クライアントはすべてのフィールドを必要としなくても、クライアントはすべてのデータを取得しなければならないため、 `Over-fetching` です。クライアントはまた、必要とされるすべてのデータを取得するために、最初の呼び出し(HATEOAS)に応じて複数のREST API呼び出しを必要とする場合があり、 `Under-fetching` です。"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:34
@@ -73,7 +73,7 @@ msgstr ""
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:38
 msgid "Since GraphQL API's returns data that are requested by the client adding additional fields and capabilities to existing API will not create breaking changes to existing clients."
-msgstr ""
+msgstr "GraphQL APIはクライアントから要求されたデータを返すので、既存のAPIにフィールドや機能を追加しても、既存のクライアントに大きな変更を加えることはありません。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:39
@@ -115,12 +115,12 @@ msgstr "アーキテクチャ"
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:52
 msgid "In this guide, we build a simple GraphQL application that exposes a GraphQL API at `/graphql`."
-msgstr ""
+msgstr "このガイドでは、 `/graphql` で GraphQL API を公開するシンプルな GraphQL アプリケーションを構築します。"
 
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:54
 msgid "This example was inspired by a popular GraphQL API."
-msgstr ""
+msgstr "この例は、人気のある GraphQL API にインスパイアされたものです。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:55
@@ -141,7 +141,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: quote
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:63
 msgid "The solution is located in the `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `microprofile-graphql-quickstart` {quickstarts-tree-url}/microprofile-graphql-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:64
@@ -169,12 +169,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:79
 msgid "This command generates a Maven project, importing the `smallrye-graphql` extension which is an implementation of the MicroProfile GraphQL specification used in Quarkus."
-msgstr ""
+msgstr "このコマンドは、Quarkusで使用されているMicroProfile GraphQL仕様の実装である `smallrye-graphql` エクステンションをインポートして、Mavenプロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:82
 msgid "If you already have your Quarkus project configured, you can add the `smallrye-graphql` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `smallrye-graphql` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:86
@@ -201,17 +201,17 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:98
 #, no-wrap
 msgid "Preparing an Application: GraphQL API"
-msgstr ""
+msgstr "アプリケーションの準備: GraphQL API"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:101
 msgid "In this section we will start creating the GraphQL API."
-msgstr ""
+msgstr "このセクションでは、GraphQL APIの作成を開始します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:103
 msgid "First, create the following entities representing a film from a galaxy far far away:"
-msgstr ""
+msgstr "まず、遠く離れた銀河系の映画を表す次のような実体を作りなさい。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:107
@@ -728,12 +728,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:351
 #, no-wrap
 msgid "Launch"
-msgstr ""
+msgstr "起動"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:354
 msgid "Launch the quarkus app:"
-msgstr ""
+msgstr "quarkusアプリを起動します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:357
@@ -767,7 +767,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:370
 #, no-wrap
 msgid "GraphiQL UI"
-msgstr ""
+msgstr "GraphiQL UI"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/microprofile-graphql.adoc:373
