--- a/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
@@ -3,48 +3,46 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-28 09:54+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Title =
 #: upstream/_guides/quarkus-intro.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What is Quarkus"
 msgstr "Quarkusとは"
 
-#.  tag::intro[]
+#. tag::intro[]
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:19
-#, fuzzy
 msgid "Quarkus is a Cloud Native, Container First framework for writing Java applications."
 msgstr "Quarkusは、Javaアプリケーションを書くためのクラウドネイティブ、コンテナーファーストのフレームワークです。"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Container First"
 msgstr "コンテナーファースト"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:23
-#, fuzzy
 msgid "Minimal footprint Java applications optimized for running in containers"
 msgstr "コンテナーでの実行に最適化されたミニマムフットプリントのJavaアプリケーション"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:23
 #: upstream/_guides/quarkus-intro.adoc:56
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Cloud Native"
 msgstr "クラウドネイティブ"
 
@@ -52,7 +50,7 @@ msgstr "クラウドネイティブ"
 #: upstream/_guides/quarkus-intro.adoc:25
 #, fuzzy
 msgid "Embraces 12 factor architecture in environments like Kubernetes"
-msgstr "Kubernetesのような環境で12因子アーキテクチャを採用"
+msgstr "Kubernetesのような環境で12ファクターアーキテクチャを採用"
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:25
@@ -120,7 +118,7 @@ msgstr "妥協のない開発中心の体験で、素晴らしいアプリケー
 msgid "All under one framework."
 msgstr "すべては一つの枠組みの下で。"
 
-#.  end::intro[]
+#. end::intro[]
 #. type: Title ==
 #: upstream/_guides/quarkus-intro.adoc:40
 #, fuzzy, no-wrap
