--- a/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_guides/quarkus-intro.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:05+0900\n"
-"PO-Revision-Date: 2021-03-28 09:54+0900\n"
+"PO-Revision-Date: 2021-03-28 10:06+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,9 +54,9 @@ msgstr "Kubernetesのような環境で12ファクターアーキテクチャを
 
 #. type: Labeled list
 #: upstream/_guides/quarkus-intro.adoc:25
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Unify imperative and reactive"
-msgstr "命令的なものと反応的なものを統一する"
+msgstr "命令型なものとリアクティブ型を統一する"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:27
@@ -157,13 +157,11 @@ msgstr "先行ネイティブバイナリー"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:57
-#, fuzzy
 msgid "Java"
-msgstr "ジャワ"
+msgstr "Java"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:58
-#, fuzzy
 msgid "modular"
 msgstr "モジュラー"
 
@@ -181,7 +179,6 @@ msgstr "シームレスに最適なコンテナーを構築"
 
 #. type: Plain text
 #: upstream/_guides/quarkus-intro.adoc:63
-#, fuzzy
 msgid "Container affinity"
 msgstr "コンテナーとの親和性"
 
