Re-translate: _guides/micrometer.adoc.po

--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-25 14:03+0000\n"
-"PO-Revision-Date: 2021-03-25 22:21+0900\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-03-28 11:49+0900\n"
+"Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -64,7 +64,7 @@ msgstr "IDE"
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:26
 msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:27
@@ -101,7 +101,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:41
 msgid "The solution is located in the `micrometer-quickstart` {quickstarts-tree-url}/micrometer-quickstart[directory]."
-msgstr "ソリューションは `micrometer-quickstart` {quickstarts-tree-url}/micrometer-quickstart[directory] にあります。"
+msgstr "ソリューションは `micrometer-quickstart` {quickstarts-tree-url}/micrometer-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:42
@@ -111,14 +111,13 @@ msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:48
-#, fuzzy
 msgid "Micrometer defines a core library and a set of additional libraries that support different monitoring systems.  Quarkus Micrometer extensions are structured similarly: `quarkus-micrometer` provides core micrometer support and runtime integration and other supporting Quarkus and Quarkiverse extensions bring in additional dependencies and requirements to support specific monitoring systems."
-msgstr "Micrometerは、コアライブラリと、さまざまなモニターリングシステムをサポートする追加ライブラリのセットを定義しています。Quarkus Micrometerのエクステンションも似たような構造になっています。 `quarkus-micrometer` はコアMicrometerのサポートとランタイムの統合を提供し、他のサポートするQuarkusやQuarkiverseのエクステンションは、特定のモニターリングシステムをサポートするための追加の依存関係や要件をもたらします。"
+msgstr "Micrometerは、コアライブラリと、さまざまなモニタリングシステムをサポートする追加ライブラリのセットを定義しています。Quarkus Micrometerのエクステンションも同様に構成されています。 `quarkus-micrometer` は Micrometer コアのサポートとランタイムの統合を提供し、その他のサポートするQuarkusやQuarkiverseのエクステンションは、特定のモニタリングシステムをサポートするための追加の依存関係や要件を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:50
 msgid "For this example, we'll use the Prometheus registry."
-msgstr "この例では、Prometheus のレジストリーを使用します。"
+msgstr "この例では、Prometheus のレジストリを使用します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:52
@@ -140,15 +139,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:67
-#, fuzzy
 msgid "This command generates a Maven project, that imports the `micrometer-registry-prometheus` extension as a dependency.  This extension will load the core `micrometer` extension as well as additional library dependencies required to support prometheus."
-msgstr "このコマンドは、 `micrometer-registry-prometheus` エクステンションを依存関係としてインポートする Maven プロジェクトを生成します。このエクステンションは、 `micrometer` エクステンションだけでなく、 prometheus をサポートするために必要な追加のライブラリ依存関係もロードします。"
+msgstr "このコマンドは、 `micrometer-registry-prometheus` エクステンションを依存関係としてインポートする Maven プロジェクトを生成します。このエクステンションは、 `micrometer` エクステンションだけでなく、 Prometheus をサポートするために必要な追加のライブラリ依存関係もロードします。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:70
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `micrometer-registry-prometheus` extension to your project by running the following command in your project base directory:"
-msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `micrometer` エクステンションを追加することができます。"
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `micrometer-registry-prometheus` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:74
@@ -175,19 +172,17 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:86
 #, no-wrap
 msgid "Writing the application"
-msgstr "アプリケーションの記述"
+msgstr "アプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:91
-#, fuzzy
 msgid "The application consists of a single class that implements an algorithm for checking whether a number is prime.  This algorithm is exposed over a REST interface. With the Micrometer extension enabled, metrics for all http server requests are collected automatically."
 msgstr "このアプリケーションは、数値が素数であるかどうかをチェックするアルゴリズムを実装した単一のクラスで構成されています。このアルゴリズムは REST インタフェースを介して公開されています。Micrometer エクステンションを有効にすると、すべての http サーバーのリクエストのメトリクスが自動的に収集されます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:93
-#, fuzzy
 msgid "We do want to add a few other metrics to demonstrate how those types work:"
-msgstr "これらのタイプがどのように機能するかを示すために、他にもいくつかのメトリクスを追加したいと考えています。"
+msgstr "これらのタイプのメトリクスがどのように機能するかを示すために、他にもいくつかのメトリクスを追加したいと考えています。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:95
@@ -197,12 +192,12 @@ msgstr "素数が発見されるごとにカウンタがインクリメントさ
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:96
 msgid "A gauge will store the highest prime number discovered"
-msgstr "ゲージには、発見された最高の素数が保存されます"
+msgstr "ゲージには、発見された最高の素数が保存されます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:97
 msgid "A timer will record the time spent testing if ia number is prime."
-msgstr "タイマーは、素数が素数であるかどうかのテストに費やした時間を記録します。"
+msgstr "タイマーは、数値が素数であるかどうかのテストに費やした時間を記録します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:101
@@ -332,19 +327,18 @@ msgstr "アプリケーションの実行と使用"
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:170
 msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`"
-msgstr "マイクロサービスをdevモードで実行するには、次のように実行します: `./mvnw clean compile quarkus:dev`"
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:171
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Generate some values for the metrics"
 msgstr "メトリクスの値を生成する"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:174
-#, fuzzy
 msgid "First, ask the endpoint whether some numbers are prime numbers."
-msgstr "まず、ある数が素数であるかどうかを終点に問います。"
+msgstr "まず、ある数が素数であるかどうかをエンドポイントに問います。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:178
@@ -354,15 +348,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:181
-#, fuzzy
 msgid "The application will respond that 350 is not a prime number because it can be divided by 2."
-msgstr "アプリでは、350は2で割れるので素数ではないと回答します。"
+msgstr "このアプリケーションでは、350は2で割ることができるので素数ではないと答えます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:183
-#, fuzzy
 msgid "Now for some large prime number so that the test takes a bit more time:"
-msgstr "さて、テストにもう少し時間がかかるように、いくつかの大きな素数のために。"
+msgstr "ここで、テストにもう少し時間がかかるように、大きな素数を用意します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:187
@@ -372,33 +364,29 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:191
-#, fuzzy
 msgid "The application will respond that 629521085409773 is a prime number.  If you want, try some more calls with numbers of your choice."
-msgstr "アプリは629521085409773が素数であることを回答します。もしよろしければ、お好きな番号でもう何回か電話をかけてみてください。"
+msgstr "アプリケーションは、629521085409773が素数であると答えます。  お好みの数値でさらに実行してみてください。"
 
 #. type: Title ===
 #: upstream/_guides/micrometer.adoc:192
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Review the generated metrics"
 msgstr "生成されたメトリクスを確認する"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:195
-#, fuzzy
 msgid "To view the metrics, execute `curl localhost:8080/q/metrics/`"
-msgstr "メトリクスを表示するには `curl localhost:8080/q/metrics/`"
+msgstr "メトリクスを表示するには、 `curl localhost:8080/q/metrics/` を実行します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:197
-#, fuzzy
 msgid "Prometheus-formatted metrics will be returned in plain text in no particular order."
-msgstr "プロメテウス形式のメトリクスは、順不同でプレーンテキストで返されます。"
+msgstr "Prometheusフォーマットのメトリクスは、プレーンテキストで順不同に返されます。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:202
-#, fuzzy
 msgid "The application above has only one custom gauge that measures the time spent determining whether or not a number is prime. The Micrometer extension enables additional system, jvm, and http metrics. A subset of the collected metrics are shown below."
-msgstr "上記のアプリケーションには、数値が素数かどうかの判定にかかる時間を計測するカスタムゲージが1つしかありません。Micrometer エクステンションは、追加のシステム、jvm、および http メトリクスを可能にします。収集したメトリクスのサブセットを以下に示します。"
+msgstr "上のアプリケーションには、ある数字が素数かどうかを判断するのにかかった時間を測定するカスタムゲージが1つだけあります。Micrometerエクステンションでは、システム、JVM、httpのメトリクスを追加することができます。収集されたメトリクスの一部を以下に示します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:280
@@ -483,21 +471,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:284
-#, fuzzy
 msgid "Note that metrics appear lazily, you often won't see any data for your endpoint until something tries to access it, etc."
-msgstr "メトリクスは怠惰に表示され、何かがアクセスしようとするまでエンドポイントのデータが表示されないことが多いことに注意してください。"
+msgstr "メトリクスは遅延的に表示され、何かがアクセスしようとするまでエンドポイントのデータが表示されないことが多いことに注意してください。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:285
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using MeterFilter to configure metrics"
 msgstr "MeterFilter を使ってメトリクスを設定する"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:290
-#, fuzzy
 msgid "Micrometer uses `MeterFilter` instances to customize the metrics emitted by `MeterRegistry` instances.  The Micrometer extension will detect `MeterFilter` CDI beans and use them when initializing `MeterRegistry` instances."
-msgstr "Micrometer は `MeterFilter` インスタンスを使用して、 `MeterRegistry` インスタンスが発するメトリクスをカスタマイズします。Micrometer エクステンションは `MeterFilter` CDI Beanを検出し、 `MeterRegistry` インスタンスを初期化する際に使用します。"
+msgstr "Micrometerは `MeterFilter` インスタンスを使って、 `MeterRegistry` インスタンスが出力するメトリクスをカスタマイズします。 Micrometer エクステンションは、 `MeterFilter` のCDI Beanを検出して、 `MeterRegistry` インスタンスを初期化するときにそれを使います。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:295
@@ -569,19 +555,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:340
-#, fuzzy
 msgid "In this example, a singleton CDI bean will produce two different `MeterFilter` beans. One will be applied only to Prometheus `MeterRegistry` instances (using the `@MeterFilterConstraint` qualifier), and another will be applied to all `MeterRegistry` instances. An application configuration property is also injected and used as a tag value."
-msgstr "この例では、シングルトン CDI Beanは、2 つの異なる `MeterFilter` Beanを生成します。1 つは Prometheus `MeterRegistry` インスタンスのみに適用され ( `@MeterFilterConstraint` qualifier を使用)、もう 1 つはすべての `MeterRegistry` インスタンスに適用されます。アプリケーション設定プロパティーも注入され、タグ値として使用されます。"
+msgstr "この例では、シングルトン CDI Beanは、2 つの異なる `MeterFilter` Beanを生成します。1 つは Prometheus `MeterRegistry` インスタンスのみに適用され ( `@MeterFilterConstraint` qualifier を使用)、もう 1 つはすべての `MeterRegistry` インスタンスに適用されます。アプリケーション構成プロパティーも注入され、タグ値として使用されます。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:341
 #, no-wrap
 msgid "Using other Registry implementations"
-msgstr "他のレジストリー実装の使用"
+msgstr "他のレジストリ実装の使用"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:348
-#, fuzzy
 msgid "If you aren't using Prometheus, you have a few options. Some Micrometer registry implementations have been wrapped in https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverse extensions].  To use the Micrometer StackDriver MeterRegistry, for example, you would use the `quarkus-micrometer-registry-stackdriver` extension:"
 msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのMicrometerのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseのエクステンション] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` エクステンションを使用します。"
 
@@ -597,9 +581,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:359
-#, fuzzy
 msgid "If the Micrometer registry you would like to use does not yet have an associated extension, use the `quarkus-micrometer` extension and bring in the packaged MeterRegistry dependency directly:"
-msgstr "使用したいMicrometerレジストリーがまだ関連するエクステンションを持っていない場合は、 `quarkus-micrometer` エクステンションを使用して、パッケージ化された MeterRegistry 依存関係を直接持ち込んでください。"
+msgstr "使用したい Micrometer レジストリに関連する拡張機能がまだない場合は、 `quarkus-micrometer` エクステンションを使用して、パッケージ化された MeterRegistry の依存関係を直接取り込んでください。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:370
@@ -617,7 +600,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:374
-#, fuzzy
 msgid "You will then need to specify your own provider to configure and initialize the MeterRegistry, as discussed in the next section."
 msgstr "次に、次のセクションで説明するように、MeterRegistry を設定して初期化するために、独自のプロバイダを指定する必要があります。"
 
@@ -629,13 +611,11 @@ msgstr "カスタマイズされたMeterRegistryの作成"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:378
-#, fuzzy
 msgid "Use a custom `@Produces` method to create and configure a customized `MeterRegistry` if you need to."
 msgstr "必要に応じて、カスタム `@Produces` メソッドを使用して、カスタマイズされた `MeterRegistry` を作成して設定します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:380
-#, fuzzy
 msgid "The following example customizes the line format used for StatsD:"
 msgstr "以下の例では、StatsDで使用される行フォーマットをカスタマイズしています。"
 
@@ -664,27 +644,24 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:399
-#, fuzzy
 msgid "This example corresponds to the following instructions in the Micrometer documentation: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
 msgstr "この例は、Micrometerのドキュメントにある以下の指示に対応しています: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:404
-#, fuzzy
 msgid "Note that the method returns the specific type of `MeterRegistry` as a `@Singleton`. Use MicroProfile Config to inject any configuration attributes you need to configure the registry. Most Micrometer registry extensions, like `quarkus-micrometer-registry-statsd`, define a producer for registry-specific configuration objects that are integrated with the Quarkus configuration model."
 msgstr "このメソッドは、 `MeterRegistry` の特定の型を `@Singleton` として返すことに注意してください。レジストリーを設定するために必要な設定属性を注入するには、MicroProfile Configを使用します。 `quarkiverse-micrometer-registry-statsd` のようなほとんどのMicrometerのレジストリーエクステンションでは、Quarkusの設定モデルと統合されたレジストリー固有の設定オブジェクトのプロデューサを定義しています。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:405
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Support for the MicroProfile Metrics API"
 msgstr "MicroProfile Metrics API のサポート"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:410
-#, fuzzy
 msgid "If you use the MicroProfile Metrics API in your application, the Micrometer extension will create an adaptive layer to map those metrics into the Micrometer registry. Note that naming conventions between the two systems will change, but you can use MeterFilters to remap names or tags to what your dashboards require."
-msgstr "アプリケーションで MicroProfile Metrics API を使用している場合、Micrometer エクステンションは、それらのメトリクスを Micrometer レジストリーにマップするための適応レイヤーを作成します。2 つのシステム間では命名規則が変わることに注意してください。ただし、MeterFilters を使用して名前やタグをダッシュボードが必要とするものにリマップすることができます。"
+msgstr "アプリケーションで MicroProfile Metrics API を使用している場合、Micrometer 拡張機能は、これらのメトリクスを Micrometer レジストリにマッピングするための適応レイヤーを作成します。2 つのシステム間の命名規則は変更されますが、MeterFilters を使用して名前やタグをダッシュボードが必要とするものに再マッピングすることができることに注意してください。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:417
@@ -718,7 +695,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:435
-#, fuzzy
 msgid "The MP Metrics API compatibility layer will be moved to a different extension in the future."
 msgstr "MP Metrics API互換性レイヤは、将来的には別のエクステンションに移される予定です。"
 
