Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/quarkus-intro.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/quarkus-intro.adoc.po
@@ -26,7 +26,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:19
 msgid "Quarkus is a Cloud Native, Container First framework for writing Java applications."
-msgstr ""
+msgstr "Quarkusは、Javaアプリケーションを書くためのクラウドネイティブ、コンテナーファーストのフレームワークです。"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:21
@@ -37,14 +37,14 @@ msgstr "コンテナファースト"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:23
 msgid "Minimal footprint Java applications optimized for running in containers"
-msgstr ""
+msgstr "コンテナーでの実行に最適化されたミニマムフットプリントのJavaアプリケーション"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:23
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:56
 #, no-wrap
 msgid "Cloud Native"
-msgstr ""
+msgstr "クラウドネイティブ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:25
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:25
 #, no-wrap
 msgid "Unify imperative and reactive"
-msgstr ""
+msgstr "命令型なものとリアクティブ型を統一する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:27
@@ -146,7 +146,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:57
 msgid "Java"
-msgstr ""
+msgstr "Java"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:58
@@ -166,7 +166,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:63
 msgid "Container affinity"
-msgstr ""
+msgstr "コンテナーとの親和性"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/quarkus-intro.adoc:65
