--- a/l10n/po/ja_JP/_versions/1.11/guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/micrometer.adoc.po
@@ -111,7 +111,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:48
 msgid "Micrometer defines a core library and a set of additional libraries that support different monitoring systems.  Quarkus Micrometer extensions are structured similarly: `quarkus-micrometer` provides core micrometer support and runtime integration and other supporting Quarkus and Quarkiverse extensions bring in additional dependencies and requirements to support specific monitoring systems."
-msgstr ""
+msgstr "Micrometerは、コアライブラリと、さまざまなモニタリングシステムをサポートする追加ライブラリのセットを定義しています。Quarkus Micrometerのエクステンションも同様に構成されています。 `quarkus-micrometer` は Micrometer コアのサポートとランタイムの統合を提供し、その他のサポートするQuarkusやQuarkiverseのエクステンションは、特定のモニタリングシステムをサポートするための追加の依存関係や要件を提供します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:50
@@ -139,12 +139,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:67
 msgid "This command generates a Maven project, that imports the `micrometer-registry-prometheus` extension as a dependency.  This extension will load the core `micrometer` extension as well as additional library dependencies required to support prometheus."
-msgstr ""
+msgstr "このコマンドは、 `micrometer-registry-prometheus` エクステンションを依存関係としてインポートする Maven プロジェクトを生成します。このエクステンションは、 `micrometer` エクステンションだけでなく、 Prometheus をサポートするために必要な追加のライブラリ依存関係もロードします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:70
 msgid "If you already have your Quarkus project configured, you can add the `micrometer-registry-prometheus` extension to your project by running the following command in your project base directory:"
-msgstr ""
+msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `micrometer-registry-prometheus` エクステンションを追加することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:74
@@ -176,12 +176,12 @@ msgstr "アプリケーションの記述"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:91
 msgid "The application consists of a single class that implements an algorithm for checking whether a number is prime.  This algorithm is exposed over a REST interface. With the Micrometer extension enabled, metrics for all http server requests are collected automatically."
-msgstr ""
+msgstr "このアプリケーションは、数値が素数であるかどうかをチェックするアルゴリズムを実装した単一のクラスで構成されています。このアルゴリズムは REST インタフェースを介して公開されています。Micrometer エクステンションを有効にすると、すべての http サーバーのリクエストのメトリクスが自動的に収集されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:93
 msgid "We do want to add a few other metrics to demonstrate how those types work:"
-msgstr ""
+msgstr "これらのタイプのメトリクスがどのように機能するかを示すために、他にもいくつかのメトリクスを追加したいと考えています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:95
@@ -375,17 +375,17 @@ msgstr "生成されたメトリクスを確認する"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:195
 msgid "To view the metrics, execute `curl localhost:8080/q/metrics/`"
-msgstr ""
+msgstr "メトリクスを表示するには、 `curl localhost:8080/q/metrics/` を実行します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:197
 msgid "Prometheus-formatted metrics will be returned in plain text in no particular order."
-msgstr ""
+msgstr "Prometheusフォーマットのメトリクスは、プレーンテキストで順不同に返されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:202
 msgid "The application above has only one custom gauge that measures the time spent determining whether or not a number is prime. The Micrometer extension enables additional system, jvm, and http metrics. A subset of the collected metrics are shown below."
-msgstr ""
+msgstr "上のアプリケーションには、ある数字が素数かどうかを判断するのにかかった時間を測定するカスタムゲージが1つだけあります。Micrometerエクステンションでは、システム、JVM、httpのメトリクスを追加することができます。収集されたメトリクスの一部を以下に示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:280
@@ -471,7 +471,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:284
 msgid "Note that metrics appear lazily, you often won't see any data for your endpoint until something tries to access it, etc."
-msgstr ""
+msgstr "メトリクスは遅延的に表示され、何かがアクセスしようとするまでエンドポイントのデータが表示されないことが多いことに注意してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/micrometer.adoc:285
@@ -482,7 +482,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:290
 msgid "Micrometer uses `MeterFilter` instances to customize the metrics emitted by `MeterRegistry` instances.  The Micrometer extension will detect `MeterFilter` CDI beans and use them when initializing `MeterRegistry` instances."
-msgstr ""
+msgstr "Micrometerは `MeterFilter` インスタンスを使って、 `MeterRegistry` インスタンスが出力するメトリクスをカスタマイズします。 Micrometer エクステンションは、 `MeterFilter` のCDI Beanを検出して、 `MeterRegistry` インスタンスを初期化するときにそれを使います。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:295
@@ -555,7 +555,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:340
 msgid "In this example, a singleton CDI bean will produce two different `MeterFilter` beans. One will be applied only to Prometheus `MeterRegistry` instances (using the `@MeterFilterConstraint` qualifier), and another will be applied to all `MeterRegistry` instances. An application configuration property is also injected and used as a tag value."
-msgstr ""
+msgstr "この例では、シングルトン CDI Beanは、2 つの異なる `MeterFilter` Beanを生成します。1 つは Prometheus `MeterRegistry` インスタンスのみに適用され ( `@MeterFilterConstraint` qualifier を使用)、もう 1 つはすべての `MeterRegistry` インスタンスに適用されます。アプリケーション構成プロパティーも注入され、タグ値として使用されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/micrometer.adoc:341
@@ -566,7 +566,7 @@ msgstr "他のレジストリー実装の使用"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:348
 msgid "If you aren't using Prometheus, you have a few options. Some Micrometer registry implementations have been wrapped in https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverse extensions].  To use the Micrometer StackDriver MeterRegistry, for example, you would use the `quarkus-micrometer-registry-stackdriver` extension:"
-msgstr ""
+msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのMicrometerのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseのエクステンション] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` エクステンションを使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:355
@@ -581,7 +581,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:359
 msgid "If the Micrometer registry you would like to use does not yet have an associated extension, use the `quarkus-micrometer` extension and bring in the packaged MeterRegistry dependency directly:"
-msgstr ""
+msgstr "使用したい Micrometer レジストリに関連する拡張機能がまだない場合は、 `quarkus-micrometer` エクステンションを使用して、パッケージ化された MeterRegistry の依存関係を直接取り込んでください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:370
@@ -600,7 +600,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:374
 msgid "You will then need to specify your own provider to configure and initialize the MeterRegistry, as discussed in the next section."
-msgstr ""
+msgstr "次に、次のセクションで説明するように、MeterRegistry を設定して初期化するために、独自のプロバイダを指定する必要があります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/micrometer.adoc:375
@@ -611,12 +611,12 @@ msgstr "カスタマイズされたMeterRegistryの作成"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:378
 msgid "Use a custom `@Produces` method to create and configure a customized `MeterRegistry` if you need to."
-msgstr ""
+msgstr "必要に応じて、カスタム `@Produces` メソッドを使用して、カスタマイズされた `MeterRegistry` を作成して設定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:380
 msgid "The following example customizes the line format used for StatsD:"
-msgstr ""
+msgstr "以下の例では、StatsDで使用される行フォーマットをカスタマイズしています。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:388
@@ -644,12 +644,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:399
 msgid "This example corresponds to the following instructions in the Micrometer documentation: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
-msgstr ""
+msgstr "この例は、Micrometerのドキュメントにある以下の指示に対応しています: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:404
 msgid "Note that the method returns the specific type of `MeterRegistry` as a `@Singleton`. Use MicroProfile Config to inject any configuration attributes you need to configure the registry. Most Micrometer registry extensions, like `quarkus-micrometer-registry-statsd`, define a producer for registry-specific configuration objects that are integrated with the Quarkus configuration model."
-msgstr ""
+msgstr "このメソッドは、 `MeterRegistry` の特定の型を `@Singleton` として返すことに注意してください。レジストリーを設定するために必要な設定属性を注入するには、MicroProfile Configを使用します。 `quarkiverse-micrometer-registry-statsd` のようなほとんどのMicrometerのレジストリーエクステンションでは、Quarkusの設定モデルと統合されたレジストリー固有の設定オブジェクトのプロデューサを定義しています。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/micrometer.adoc:405
@@ -660,7 +660,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:410
 msgid "If you use the MicroProfile Metrics API in your application, the Micrometer extension will create an adaptive layer to map those metrics into the Micrometer registry. Note that naming conventions between the two systems will change, but you can use MeterFilters to remap names or tags to what your dashboards require."
-msgstr ""
+msgstr "アプリケーションで MicroProfile Metrics API を使用している場合、Micrometer 拡張機能は、これらのメトリクスを Micrometer レジストリにマッピングするための適応レイヤーを作成します。2 つのシステム間の命名規則は変更されますが、MeterFilters を使用して名前やタグをダッシュボードが必要とするものに再マッピングすることができることに注意してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/micrometer.adoc:417
@@ -695,7 +695,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/micrometer.adoc:435
 msgid "The MP Metrics API compatibility layer will be moved to a different extension in the future."
-msgstr ""
+msgstr "MP Metrics API互換性レイヤは、将来的には別のエクステンションに移される予定です。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/micrometer.adoc:436
