--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -3,6 +3,7 @@ l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po, 0, 57, 
 l10n/po/ja_JP/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc.po, 0, 19, 0, 192 ,100%
 l10n/po/ja_JP/_posts/2021-03-11-ja-quarkus-io.adoc.po, 0, 6, 0, 147 ,100%
 l10n/po/ja_JP/_posts/2021-03-04-path-resolution-in-quarkus.adoc.po, 0, 83, 0, 1697 ,100%
+l10n/po/ja_JP/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc.po, 0, 14, 0, 521 ,100%
 l10n/po/ja_JP/_posts/2021-02-17-intellij-quarkus-tools-1.4.0.adoc.po, 0, 12, 0, 112 ,100%
 l10n/po/ja_JP/_posts/2021-02-10-resteasy-reactive-faq.adoc.po, 1, 60, 20, 2097 ,100%
 l10n/po/ja_JP/_posts/2021-02-09-quarkus-1-11-2-final-released.adoc.po, 0, 18, 0, 168 ,100%
