--- a/l10n/po/ja_JP/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 00:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-30 23:22+0900\n"
+"Language: to\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: Migrating existing applications to Quarkus with Migration Toolkit for Applications\n"
@@ -44,72 +44,64 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:10
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The evolution of Java"
 msgstr "Javaの進化"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:14
-#, fuzzy
 msgid "Java is a language that never ceases to impress me. From its conception, to the first Java Virtual Machines with the premise of “write once run anywhere”, to Tomcat or to the Enterprise Edition standards (whether J2EE, or Java EE) it’s an ever evolving language.  With the advent of containerization and the possibility of effectively managing microservices, running components that could be loaded in a \"reactive\" manner and the need for boot speed and efficiency, Quarkus is revealing itself as the choice for Cloud Native Java programmers."
-msgstr "Javaという言語には、いつも驚かされます。その構想から、「write once run anywhere」を前提とした最初のJava仮想マシン、Tomcat、あるいはEnterprise Editionの規格（J2EEでもJava EEでも）に至るまで、常に進化し続ける言語です。コンテナ化が進み、マイクロサービスを効果的に管理できるようになり、「リアクティブ」な方法でロードできるコンポーネントを実行し、起動速度と効率性が求められるようになったことで、QuarkusはクラウドネイティブJavaプログラマーの選択肢として明らかになってきました。"
+msgstr "Javaという言語には、いつも驚かされます。その構想から、「write once run anywhere」を前提とした最初のJava仮想マシン、Tomcat、あるいはEnterprise Editionの規格（J2EEでもJava EEでも）に至るまで、常に進化し続ける言語です。コンテナ化が進み、マイクロサービスを効果的に管理できるようになり、「リアクティブ」な方法でロードできるコンポーネントを実行し、起動速度と効率性が求められるようになったことで、QuarkusはクラウドネイティブJavaプログラマーの選択肢として登場しました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Working with brownfield applications"
 msgstr "ブラウンフィールドでの活用"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:18
-#, fuzzy
 msgid "But, after so many years and lines of code written, how can we move those Java workloads to this set of new paradigms? The Red Hat Modernization and Migration Solutions team is here to help by providing the http://red.ht/mta[Migration Toolkit for Applications] (MTA), a tool that simplifies, and reduces the effort required to take this step. As a matter of fact, just like Java, MTA is not a new tool but one that has been evolving over time."
 msgstr "しかし、何年もかけて何行ものコードを書いた後、これらのJavaワークロードをこの一連の新しいパラダイムに移行するにはどうすればよいのでしょうか？Red HatのModernization and Migration Solutionsチームは、 link:http://red.ht/mta[Migration Toolkit for]Applications (MTA)というツールを提供することで、このステップに必要な労力を簡略化し、削減することを支援します。実は、Javaと同様にMTAも新しいツールではなく、時間をかけて進化してきたものなのです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:20
-#, fuzzy
 msgid "It all started by helping developers update their code to run in a new https://developers.redhat.com/products/eap/[JBoss EAP] version, a \"piece of cake\". That’s why the tool started by being called \"JBoss Cake\" back in 2012. It kept evolving to be able to be used to modernize Java code and move it from WebLogic or WebSphere to JBoss EAP or https://developers.redhat.com/products/webserver/[JBoss Web Server] (the Red Hat Supported build of Tomcat), when it became the Red Hat Application Migration Toolkit. It kept being improved by developers and consultants, bringing their experience by working in the first line with production code, who wrote more and better rules, increasing the number of covered cases."
-msgstr "その始まりは、開発者がコードを更新して link:https://developers.redhat.com/products/eap/[JBoss EAP]の新バージョンで実行できるようにするための \"ケーキ \"を作ることでした。そのため、このツールは2012年に「JBoss Cake」と呼ばれることから始まりました。その後、JavaコードをモダナイズしてWebLogicやWebSphereからJBoss EAPや link:https://developers.redhat.com/products/webserver/[JBoss Web Server]（TomcatのRed Hat対応版）に移行する際に使用できるように進化を続け、Red Hat Application Migration Toolkitとなりました。このツールは、開発者やコンサルタントによって改良され続けています。開発者やコンサルタントは、本番コードの第一線で働いた経験を生かして、より良いルールを書き、対象となるケースを増やしていきました。"
+msgstr "その始まりは、開発者がコードを更新して link:https://developers.redhat.com/products/eap/[JBoss EAP]の新バージョンで実行できるようにすることを簡単にするためでした。そのため、このツールは2012年に「JBoss Cake」と呼ばれることから始まりました。その後、JavaコードをモダナイズしてWebLogicやWebSphereからJBoss EAPや link:https://developers.redhat.com/products/webserver/[JBoss Web Server]（TomcatのRed Hat対応版）に移行する際に使用できるように進化を続け、Red Hat Application Migration Toolkitとなりました。このツールは、開発者やコンサルタントによって改良され続けています。開発者やコンサルタントは、本番コードの第一線で働いた経験を生かして、より良いルールを書き、対象となるケースを増やしていきました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "MTA 5.1.2 and beyond"
 msgstr "MTA 5.1.2以降"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:24
-#, fuzzy
 msgid "In the latest evolution, the tool started being called by its current name, Migration Toolkit for Applications, or MTA. With the release 5.0.0, it started seeding the first rules to help migrate applications from the Spring Boot framework to Quarkus. That happened, among other things due to the feedback that developer teams working with modern Java patterns, and deploying on Kubernetes, were interested in. It happened that these teams were using Spring Boot but quickly became interested in Quarkus as a way to improve speed, required resources, and productivity. With version 5.1.1, MTA broke the 120 rules barrier to ease this transformation path. Now, closing the circle, MTA in the coming release 5.1.3 of MTA (expected by mid March 2021) will include rules to upgrade code written for Quarkus 1.11, so it can efficiently be moved to 1.12. A piece of cake!"
-msgstr "最新の進化の中で、このツールは現在の名前であるMigration Toolkit for Applications（MTA）と呼ばれるようになりました。5.0.0のリリースでは、Spring BootフレームワークからQuarkusへのアプリケーションの移行を支援する最初のルールの提供が開始されました。これは、最新のJavaパターンを使用し、Kubernetesにデプロイする開発者チームが興味を持っているというフィードバックを受けたことなどによります。これらのチームは、Spring Bootを使用していましたが、スピード、必要なリソース、生産性を向上させる方法として、すぐにQuarkusに興味を持つようになりました。MTAはバージョン5.1.1で120ルールの壁を破り、この変革の道を容易にしました。今、輪をかけて、来るべきMTAのリリース5.1.3（2021年3月中旬までに予定）では、Quarkus 1.11向けに書かれたコードをアップグレードするためのルールが含まれており、1.12への移行を効率的に行うことができます。楽勝ですね"
+msgstr "最新の進化の中で、このツールは現在の名前であるMigration Toolkit for Applications（MTA）と呼ばれるようになりました。5.0.0のリリースでは、Spring BootフレームワークからQuarkusへのアプリケーションの移行を支援する最初のルールの提供が開始されました。これは、最新のJavaパターンを使用し、Kubernetesにデプロイする開発者チームが興味を持っているというフィードバックを受けたことなどによります。これらのチームは、Spring Bootを使用していましたが、スピード、必要なリソース、生産性を向上させる方法として、すぐにQuarkusに興味を持つようになりました。MTAはバージョン5.1.1で120ルールの壁を突破し、このトランスフォーメーションの道を容易にしました。そして、今後MTAのリリース5.1.3（2021年3月中旬までに予定）では、Quarkus 1.11向けに書かれたコードをアップグレードするためのルールが含まれており、1.12への移行を効率的に行うことができます。簡単ですね!"
 
 #. type: Title ==
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:25
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Related resources"
 msgstr "関連リソース"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:28
-#, fuzzy
 msgid "Do you want to know more? Here you are, some MTA related resources:"
-msgstr "もっと知りたいと思いませんか？ここでは、MTA関連のリソースをご紹介します。"
+msgstr "もっと知りたいですか？ここでは、MTA関連のリソースをご紹介します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:30
-#, fuzzy
 msgid "http://red.ht/mta[MTA web page] (with downloads and demo videos)"
-msgstr "link:http://red.ht/mta[MTAのWebページ]（ダウンロード、デモビデオあり"
+msgstr "link:http://red.ht/mta[MTAのWebページ]（ダウンロード、デモビデオあり）"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:31
-#, fuzzy
 msgid "https://developers.redhat.com/blog/2020/12/08/spring-boot-to-quarkus-migrations-and-more-in-red-hats-migration-toolkit-for-applications-5-1-0/[Spring Boot to Quarkus migrations with MTA] (in developers.redhat.com)"
-msgstr "link:https://developers.redhat.com/blog/2020/12/08/spring-boot-to-quarkus-migrations-and-more-in-red-hats-migration-toolkit-for-applications-5-1-0/[MTAによるSpring BootからQuarkusへ]の移行(in developers.redhat.com)"
+msgstr "link:https://developers.redhat.com/blog/2020/12/08/spring-boot-to-quarkus-migrations-and-more-in-red-hats-migration-toolkit-for-applications-5-1-0/[MTAによるSpring BootからQuarkusへ]の移行(developers.redhat.com 内)"
 
 #. type: Plain text
 #: upstream/_posts/2021-02-25-migrating-existing-apps-to-quarkus-with-mta.adoc:31
-#, fuzzy
 msgid "https://youtu.be/coeVxLaXy5M[Migrating Spring Boot \"Pet-Clinic\" (REST version) to Quarkus] (http://konveyor.io[konveyor.io] meetup recording)"
-msgstr "link:https://youtu.be/coeVxLaXy5M[Spring Boot「Pet-Clinic」（REST版）のQuarkusへ]の移行 link:http://konveyor.io[（konveyor.ioの]ミートアップ記録"
+msgstr "link:https://youtu.be/coeVxLaXy5M[Spring Boot「Pet-Clinic」（REST版）のQuarkusへの移行] （link:http://konveyor.io[konveyor.io] のミートアップレコーディング）"
